# web-swmm

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pg-docker-compose.yml
backend/: .env.example  app.py  config.py  pyproject.toml
backend/apis/: calculate.py  conduit.py  coordinate.py  junction.py  mj.py  outfall.py  raingage.py  raingage_router.py  river.py  show.py  subcatchment.py  timeseries.py  transect.py
backend/apis/agent/: chat.py
backend/schemas/: calculate.py  conduit.py  coordinate.py  junction.py  outfall.py  result.py  river.py  subcatchment.py  timeseries.py  transect.py
backend/schemas/agent/: chat.py  state.py
backend/swmm/: swmm.inp.example  swmm_test.ini  swmm_test.inp
backend/tools/: calculate.py  conduit.py  junction.py  outfall.py  subcatchment.py  web_ui.py  webgis.py  webui.py
backend/utils/: coordinate_converter.py  logger.py  swmm_constant.py  utils.py
backend/utils/agent/: async_store_manager.py  graph_manager.py  llm_manager.py  message_manager.py  serial_tool_node.py  websocket_manager.py
backend/utils/agent/graph/: __init__.py  plan_graph.py  tool_graph.py
backend/utils/agent/node/: backend_tool_check.py  backend_tool_execution.py  backend_tools.py  frontend_tool_execution.py  frontend_tools.py  intent_classifier.py  question_rewrite.py  summary_response.py
backend/utils/agent/node/plan/: executor.py  observer.py  planner.py  summary.py  tool_execution.py
backend/utils/agent/node/tool/: backend_tool_check.py  (+7 more)
backend/utils/agent/route/: backend_tool_check.py  backend_tools.py  frontend_tools.py
(+59 files in other folders)
